fix: slide sidebar from right on mobile

--- a/src/components/layout/BurgerMenu.module.scss
+++ b/src/components/layout/BurgerMenu.module.scss
@@ -19,7 +19,7 @@
 .hamburgerContainer {
   display: flex;
   align-items: center;
-  margin-right: 8px; /* Odstęp od breadcrumbs na mobile */
+  margin-left: 8px; /* Odstęp od ikonki motywu na mobile */
 }
 
 .hamburger:hover {
